[tool.poetry]
name = "ecs-capacity-providers"
version = "0.1.0"
description = ""
authors = ["Kamil Samaj <kamil.samaj@accolade.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"aws-cdk.core" = "^1.97.0"
"aws-cdk.aws-ecs-patterns" = "^1.97.0"
"aws-cdk.aws-ec2" = "^1.97.0"
"aws-cdk.aws-ecs" = "^1.97.0"
"aws-cdk.aws-servicediscovery" = "^1.97.0"
"aws-cdk.aws-iam" = "^1.97.0"
"aws-cdk.aws-efs" = "^1.97.0"
"aws-cdk.aws-autoscaling" = "^1.97.0"
"aws-cdk.aws-ssm" = "^1.97.0"
awscli = "^1.19.49"
awslogs = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
